(fix) 3. Liquibase. Интеграционные тесты. [#95881 #324718]